# imagesTools

./: .pre-commit-config.yaml  LICENSE  nameFromExif.py  pyproject.toml  replaceDashes.py  separateByCamera.py
